fixed download game/tools links & appearance, fixed friendslist appearance on mobile and buttons, fixed profile buttons, fixed support button, added friend request to notifications, fixed styling of dlc maps,updated faqs, fixed search functionality of forum to display error when no keyword and display no results when there no results, fixed index logo, fixed mycomments styling on mobile, added stylesheet for downloadCMaps

--- a/downloadCMaps/stylesheet.css
+++ b/downloadCMaps/stylesheet.css
@@ -1,26 +1,13 @@
-.panel-title {
-	text-align: center;
-	color: black;}
-	
-.panel-body {
-	text-align: center;}
-
-a, a:link, a:visited {
+a.uploaderName, a.uploaderName:link, a.uploaderName:visited {
     color: white;
     background-color: transparent;
     text-decoration: none;
 }
 
 
-a:hover {
+a.uploaderName:hover{
     color: blue;
     background-color: transparent;
     text-decoration: underline;
 }
-
-
-
-
- 
-	
 
